add work and education, set env for kube
