# yin_resume_api/controllers/resume_controller.py
@@ -8,12 +8,10 @@ from yin_resume_api.models.education import Education  # noqa: E501
 from yin_resume_api.models.work import Work  # noqa: E501
 from yin_resume_api import util
 
-import json
-
-from yin_resume_api.bussiness_logical.bl_resume import get_all_descs
+from yin_resume_api.bussiness_logical.bl_resume import *
 
 
-def get_desc(name_id):  # noqa: E501
+def get_descs(name_id=None):  # noqa: E501
     """Find person description by ID
 
     Get the text about self description # noqa: E501
@@ -23,10 +21,12 @@ def get_desc(name_id):  # noqa: E501
 
     :rtype: Union[Desc, Tuple[Desc, int], Tuple[Desc, int, Dict[str, str]]
     """
-    return get_all_descs()
+    if name_id:
+        return bl_get_all_descs(name_id=name_id)
+    return bl_get_all_descs()
 
 
-def get_educations(name_id):  # noqa: E501
+def get_educations(name_id=None):  # noqa: E501
     """Find person description by ID
 
     Get all education info for a person by ID # noqa: E501
@@ -36,10 +36,12 @@ def get_educations(name_id):  # noqa: E501
 
     :rtype: Union[Education, Tuple[Education, int], Tuple[Education, int, Dict[str, str]]
     """
-    return 'do some magic!'
+    if name_id:
+        return bl_get_all_educations(name_id=name_id)
+    return bl_get_all_educations()
 
 
-def get_works(name_id):  # noqa: E501
+def get_works(name_id=None):  # noqa: E501
     """Find person description by ID
 
     Get all work info for a person by ID # noqa: E501
@@ -49,4 +51,6 @@ def get_works(name_id):  # noqa: E501
 
     :rtype: Union[Work, Tuple[Work, int], Tuple[Work, int, Dict[str, str]]
     """
-    return 'do some magic!'
+    if name_id:
+        return bl_get_all_works(name_id=name_id)
+    return bl_get_all_works()
